Add support for nullability for properties