@@ -32,7 +32,6 @@ import org.omega.typescript.processor.utils.TypeUtils;
 import javax.lang.model.element.*;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Created by kibork on 5/9/2018.
@@ -47,8 +46,11 @@ public class LombokPropertyLocator implements TypePropertyLocator {
 
 
     @Override
-    public List<PropertyDefinition> locateProperties(final TypeElement typeElement, final ProcessingContext context) {
-        final Optional<ResolvedAnnotationValues> dataAnnotation = AnnotationUtils.resolveAnnotation("lombok.Data", typeElement, context);
+    public List<PropertyDefinition> locateProperties(final TypeElement typeElement,
+                                                     final ProcessingContext context,
+                                                     final PropertyClassificationService propertyClassificationService) {
+        final Optional<ResolvedAnnotationValues> dataAnnotation = AnnotationUtils
+                .resolveAnnotation("lombok.Data", typeElement, context);
         final boolean allInstanceFields = dataAnnotation.isPresent();
 
         final List<Element> fields = TypeUtils.getMembers(typeElement, ElementKind.FIELD, context).stream()
@@ -56,12 +58,12 @@ public class LombokPropertyLocator implements TypePropertyLocator {
                 .filter(e -> !e.getModifiers().contains(Modifier.TRANSIENT))
                 .filter(e -> !AnnotationUtils.getAnnotation(e, TypeScriptIgnore.class).isPresent())
                 .filter(e -> !e.getModifiers().contains(Modifier.STATIC))
-                .collect(Collectors.toList());
+                .toList();
 
         return fields.stream()
                 .filter(f -> allInstanceFields || hasGetter(f, context))
-                .map(f -> PropertyHelpers.buildProperty(f, f.getSimpleName().toString(), f.asType(), context))
-                .collect(Collectors.toList());
+                .map(f -> PropertyHelpers.buildProperty(f, f.getSimpleName().toString(), f.asType(), context, propertyClassificationService))
+                .toList();
     }
 
     private boolean hasGetter(final Element field, final ProcessingContext context) {
